# scraping-manga-manhwa

./: .gitignore  pyproject.toml
.github/workflows/: manga-tracker.yml
config/overrides/: scan-manga.yaml
config/sites/manga/: fmteam.yaml  lelmanga.yaml
config/sites/manhwa/: raijin.yaml
config/sites/scans/: anime-sama.yaml  scan-manga.yaml
data/manga/: manga_series.yaml
scripts/: run_manga.py
src/tracker/: cli.py  logging_config.py
src/tracker/exceptions/: scrape_errors.py
src/tracker/loaders/: manga_series_loader.py  roles_loader.py  series_loader.py
src/tracker/models/: orchestration_result.py  scrape_result.py  series.py
src/tracker/notifiers/: discord_webhook.py
src/tracker/scrapers/: base.py
src/tracker/scrapers/manga/: anime_sama_adapter.py  base.py  fmteam_adapter.py  fmteam_parser.py  lelmanga_adapter.py  lelmanga_parser.py  mangamoins.py  registry.py  scan_manga_adapter.py
src/tracker/scrapers/manhwa/: raijin_adapter.py
src/tracker/services/: batch_report_service.py  http_fetcher.py  manga_multi_source_service.py  manga_orchestrator.py  manga_series_filter_service.py  manga_update_service.py
src/tracker/utils/: chapter.py  env.py  slug.py
